fix: setted z-index for popups

--- a/src/components/BookPopup/index.css
+++ b/src/components/BookPopup/index.css
@@ -1,5 +1,6 @@
 .book-popup__overlay {
   position: fixed;
+  z-index: var(--z-book-popup);
   top: 0;
   right: 0;
   bottom: 0;
