--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,8 @@
   --color-book-cover: #f0f0f0;
   --color-book-popup-overlay: #000000b8;
   --font-size: 16px;
+  --z-suggests-popup: 100;
+  --z-book-popup: 200;
 }
 
 html {
